--- a/index.html
+++ b/index.html
@@ -3,48 +3,37 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>VoFo Music | Private Listening</title>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+<title>VoFo Music | Premium</title>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 <style>
-:root{ --bg:#050505; --gold:#c5a367; --gold-glow:rgba(197,163,103,0.3); --soft:#f8f8f8; --muted:#777; --card:rgba(255,255,255,0.03); }
+:root{ --bg:#050505; --gold:#c5a367; --card:rgba(255,255,255,0.03); --muted:#777; }
 *{box-sizing:border-box;margin:0;padding:0}
-body{ background:radial-gradient(circle at 50% 40%, #151515 0%, #050505 100%); color:var(--soft); font-family:'Inter',sans-serif; min-height:100vh; overflow-x:hidden; }
+body{ background:var(--bg); color:#fff; font-family:'Inter',sans-serif; min-height:100vh; }
 .hidden{display:none !important;}
 
 /* Auth Screens */
-.auth-overlay{ position:fixed; inset:0; background:var(--bg); z-index:5000; display:flex; flex-direction:column; align-items:center; justify-content:center; }
-.auth-card{ background:#111; padding:40px; border-radius:12px; border:1px solid #222; width:90%; max-width:380px; text-align:center; }
-input[type="text"], input[type="password"]{ width:100%; padding:14px; margin-bottom:15px; background:#000; border:1px solid #333; color:white; border-radius:4px; outline:none; }
-.btn-gold{ width:100%; padding:14px; background:var(--gold); border:none; font-weight:700; border-radius:4px; cursor:pointer; color:black; letter-spacing:1px; }
+.auth-overlay{ position:fixed; inset:0; background:var(--bg); z-index:2000; display:flex; flex-direction:column; align-items:center; justify-content:center; }
+.auth-card{ background:#111; padding:40px; border-radius:12px; border:1px solid #222; width:90%; max-width:350px; text-align:center; }
+input{ width:100%; padding:14px; margin-bottom:15px; background:#000; border:1px solid #333; color:white; border-radius:4px; outline:none; }
+.btn-gold{ width:100%; padding:14px; background:var(--gold); border:none; font-weight:700; border-radius:4px; cursor:pointer; }
 
-/* Main Layout */
-.app-container{ display:grid; grid-template-columns:260px 1fr; height:100vh; }
-.sidebar{ background:rgba(0,0,0,0.9); border-right:1px solid rgba(197,163,103,0.1); padding:40px 20px; }
-.nav-item{ padding:15px; margin-bottom:10px; border-radius:6px; color:var(--muted); cursor:pointer; font-weight:600; transition:0.3s; }
-.nav-item:hover, .nav-item.active{ color:white; background:rgba(197,163,103,0.1); }
+/* Main App Layout */
+.app-container{ display:grid; grid-template-columns:250px 1fr; height:100vh; }
+.sidebar{ background:rgba(0,0,0,0.9); border-right:1px solid #222; padding:30px 20px; }
+.nav-item{ padding:12px; margin-bottom:10px; border-radius:6px; cursor:pointer; color:var(--muted); transition:0.3s; }
+.nav-item:hover, .nav-item.active{ background:rgba(197,163,103,0.1); color:var(--gold); }
 
-.main-content{ padding:40px; overflow-y:auto; padding-bottom:150px; }
-.search-bar{ display:flex; gap:10px; max-width:600px; margin-bottom:40px; }
-.search-bar input{ flex:1; background:var(--card); border:1px solid #222; padding:15px; border-radius:4px; color:white; outline:none; }
-.search-bar button{ padding:0 25px; background:var(--gold); border:none; border-radius:4px; cursor:pointer; font-weight:700; }
+.main-content{ padding:40px; overflow-y:auto; padding-bottom:120px; }
+.grid{ display:grid; grid-template-columns:repeat(auto-fill, minmax(180px, 1fr)); gap:20px; margin-top:20px; }
+.track-card{ background:var(--card); padding:15px; border-radius:10px; cursor:pointer; transition:0.3s; border:1px solid transparent; }
+.track-card:hover{ border-color:var(--gold); transform:translateY(-5px); }
+.track-card img{ width:100%; aspect-ratio:1; border-radius:6px; object-fit:cover; margin-bottom:10px; }
 
-/* Grid */
-.grid{ display:grid; grid-template-columns:repeat(auto-fill, minmax(180px, 1fr)); gap:20px; }
-.track{ background:var(--card); padding:15px; border-radius:8px; cursor:pointer; transition:0.3s; border:1px solid transparent; }
-.track:hover{ border-color:var(--gold); transform:translateY(-5px); background:rgba(197,163,103,0.05); }
-.track img{ width:100%; aspect-ratio:1; border-radius:4px; object-fit:cover; margin-bottom:10px; }
-
-/* Player */
-.player{ position:fixed; bottom:0; width:100%; background:rgba(0,0,0,0.9); backdrop-filter:blur(20px); padding:15px 30px; display:flex; align-items:center; gap:30px; border-top:1px solid var(--gold-glow); z-index:1000; }
+/* Player Bar */
+.player{ position:fixed; bottom:0; width:100%; background:rgba(0,0,0,0.95); backdrop-filter:blur(10px); padding:15px 30px; display:flex; align-items:center; gap:20px; border-top:1px solid #222; z-index:1000; }
 #progress{ flex:1; accent-color:var(--gold); cursor:pointer; }
 
-@media(max-width:768px){ 
-    .app-container{ grid-template-columns:1fr; }
-    .sidebar{ position:fixed; bottom:0; width:100%; height:70px; display:flex; padding:0; justify-content:space-around; align-items:center; z-index:2000; }
-    .sidebar h1, .nav-item span{ display:none; }
-    .player{ bottom:70px; padding:10px; flex-direction:column; gap:10px; }
-}
+@media(max-width:768px){ .app-container{ grid-template-columns:1fr; } .sidebar{ display:none; } }
 </style>
 </head>
 <body>
@@ -52,69 +41,69 @@ input[type="text"], input[type="password"]{ width:100%; padding:14px; margin-bot
 <div id="regScreen" class="auth-overlay">
     <h1 style="font-family:'Playfair Display'; color:var(--gold); font-size:3rem; margin-bottom:20px;">VoFo</h1>
     <div class="auth-card">
-        <h2 style="font-size:12px; letter-spacing:3px; margin-bottom:20px;">CREATE ACCOUNT</h2>
+        <h2 style="margin-bottom:20px; font-size:14px; letter-spacing:2px;">CREATE ACCOUNT</h2>
         <input id="regUser" type="text" placeholder="Username">
         <input id="regPass" type="password" placeholder="Password">
-        <button class="btn-gold" onclick="auth('register')">JOIN PRIVATELY</button>
-        <p style="font-size:11px; margin-top:15px; color:var(--muted); cursor:pointer;" onclick="toggleAuth('login')">Already a member? Login</p>
+        <button class="btn-gold" onclick="auth('register')">REGISTER</button>
+        <p style="font-size:12px; margin-top:15px; color:var(--muted); cursor:pointer;" onclick="showAuth('login')">Already a member? Login</p>
     </div>
 </div>
 
 <div id="loginScreen" class="auth-overlay hidden">
     <h1 style="font-family:'Playfair Display'; color:var(--gold); font-size:3rem; margin-bottom:20px;">VoFo</h1>
     <div class="auth-card">
-        <h2 style="font-size:12px; letter-spacing:3px; margin-bottom:20px;">WELCOME BACK</h2>
+        <h2 style="margin-bottom:20px; font-size:14px; letter-spacing:2px;">WELCOME BACK</h2>
         <input id="logUser" type="text" placeholder="Username">
         <input id="logPass" type="password" placeholder="Password">
-        <button class="btn-gold" onclick="auth('login')">SECURE LOGIN</button>
-        <p style="font-size:11px; margin-top:15px; color:var(--muted); cursor:pointer;" onclick="toggleAuth('reg')">New here? Register</p>
+        <button class="btn-gold" onclick="auth('login')">LOGIN</button>
+        <p style="font-size:12px; margin-top:15px; color:var(--muted); cursor:pointer;" onclick="showAuth('reg')">New here? Register</p>
     </div>
 </div>
 
 <div id="app" class="app-container hidden">
     <aside class="sidebar">
-        <h1 style="font-family:'Playfair Display'; color:var(--gold); text-align:center; margin-bottom:40px;">VoFo</h1>
-        <div class="nav-item active" onclick="showSection('search')">EXPLORE</div>
-        <div class="nav-item" onclick="showSection('library')">LIKED SONGS</div>
-        <a href="/api/logout" style="text-decoration:none; color:var(--muted); font-size:12px; display:block; text-align:center; margin-top:20px;">LOGOUT</a>
+        <h2 style="color:var(--gold); font-family:'Playfair Display'; margin-bottom:40px;">VoFo</h2>
+        <div class="nav-item active" onclick="nav('search')">EXPLORE</div>
+        <div class="nav-item" onclick="nav('liked')">LIKED SONGS</div>
+        <a href="/api/logout" style="text-decoration:none; color:#777; font-size:12px; display:block; margin-top:30px;">LOGOUT</a>
     </aside>
 
     <main class="main-content">
-        <div id="searchSection">
-            <div class="search-bar">
-                <input id="si" placeholder="Search SoundCloud tracks…">
-                <button id="sb" onclick="search()">SEARCH</button>
+        <div id="searchView">
+            <div style="display:flex; gap:10px;">
+                <input id="searchInput" placeholder="Search artist or track..." style="margin:0; text-align:left; background:var(--card);">
+                <button onclick="searchMusic()" style="background:var(--gold); border:none; padding:0 25px; border-radius:4px; font-weight:bold; cursor:pointer;">SEARCH</button>
             </div>
             <div id="results" class="grid"></div>
         </div>
-        <div id="librarySection" class="hidden">
-            <h2 style="font-family:'Playfair Display'; margin-bottom:30px;">Your Collection</h2>
-            <div id="libGrid" class="grid"></div>
+
+        <div id="likedView" class="hidden">
+            <h2 style="font-family:'Playfair Display'; color:var(--gold);">Your Collection</h2>
+            <div id="likedGrid" class="grid"></div>
         </div>
     </main>
 </div>
 
-<div class="player hidden" id="playerBar">
+<div id="player" class="player hidden">
     <img id="pThumb" src="" style="width:50px; height:50px; border-radius:4px;">
     <div style="flex:1; min-width:0;">
-        <div id="pTitle" style="font-weight:600; white-space:nowrap; overflow:hidden; text-overflow:ellipsis;"></div>
+        <div id="pTitle" style="font-weight:600; white-space:nowrap; overflow:hidden; text-overflow:ellipsis; font-size:14px;"></div>
         <input type="range" id="progress" value="0">
     </div>
     <div style="display:flex; align-items:center; gap:15px;">
-        <button id="likeBtn" onclick="toggleLike()" style="background:none; border:none; color:var(--gold); cursor:pointer; font-size:20px;">♡</button>
-        <button id="playBtn" onclick="togglePlay()" style="padding:8px 15px; background:var(--gold); border:none; border-radius:4px; font-weight:bold; cursor:pointer;">PAUSE</button>
+        <span id="likeBtn" onclick="toggleLike()" style="cursor:pointer; font-size:22px; color:var(--gold);">♡</span>
+        <button id="playBtn" onclick="togglePlay()" style="background:var(--gold); border:none; padding:8px 15px; border-radius:4px; font-weight:bold; cursor:pointer;">PAUSE</button>
     </div>
 </div>
 
 <script>
 let audio = new Audio();
-let currentTrack = null;
-let hls = null;
+let currentSong = null;
 
-// Auth check
+// Initial Check
 fetch('/api/auth/status').then(r=>r.json()).then(d=>{ if(d.logged_in) showApp(); });
 
-function toggleAuth(mode){
+function showAuth(mode){
     regScreen.classList.toggle('hidden', mode==='login');
     loginScreen.classList.toggle('hidden', mode==='reg');
 }
@@ -128,8 +117,8 @@ async function auth(type){
     });
     const data = await res.json();
     if(data.success){
-        if(type==='register'){ alert("Registration success! Please login."); toggleAuth('login'); }
-        else{ showApp(); }
+        if(type==='register'){ alert("Success! Now Login."); showAuth('login'); }
+        else { showApp(); }
     } else { alert(data.error); }
 }
 
@@ -138,45 +127,53 @@ function showApp(){
     app.classList.remove('hidden');
 }
 
-function showSection(s){
-    searchSection.classList.toggle('hidden', s!=='search');
-    librarySection.classList.toggle('hidden', s!=='library');
-    if(s==='library') loadLibrary();
+function nav(view){
+    searchView.classList.toggle('hidden', view!=='search');
+    likedView.classList.toggle('hidden', view!=='liked');
+    document.querySelectorAll('.nav-item').forEach(e=>e.classList.remove('active'));
+    event.target.classList.add('active');
+    if(view==='liked') loadLiked();
 }
 
-async function search(){
-    const q = si.value; if(!q) return;
-    sb.innerText="...";
+async function searchMusic(){
+    const q = searchInput.value; if(!q) return;
     const res = await fetch(`/api/search?q=${encodeURIComponent(q)}`);
     const data = await res.json();
     results.innerHTML = data.map(s => `
-        <div class="track" onclick='playTrack(${JSON.stringify(s)})'>
-            <img src="${s.thumbnail}">
+        <div class="track-card" onclick='playSong(${JSON.stringify(s)})'>
+            <img src="${s.thumbnail || 'https://via.placeholder.com/150'}">
+            <div style="font-weight:600; font-size:13px;">${s.title}</div>
+            <div style="color:var(--muted); font-size:11px;">${s.artist}</div>
+        </div>
+    `).join('');
+}
+
+async function playSong(s){
+    currentSong = s;
+    player.classList.remove('hidden');
+    pThumb.src = s.thumbnail; pTitle.innerText = s.title;
+    const res = await fetch('/api/play',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({url:s.id})});
+    const d = await res.json();
+    audio.src = d.stream_url; audio.play();
+    playBtn.innerText = "PAUSE";
+    likeBtn.innerText = "♡";
+}
+
+async function toggleLike(){
+    const res = await fetch('/api/like',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(currentSong)});
+    const d = await res.json();
+    likeBtn.innerText = d.status === 'liked' ? '♥' : '♡';
+}
+
+async function loadLiked(){
+    const res = await fetch('/api/library');
+    const data = await res.json();
+    likedGrid.innerHTML = data.map(s => `
+        <div class="track-card" onclick='playSong(${JSON.stringify(s)})'>
+            <img src="${s.thumbnail || 'https://via.placeholder.com/150'}">
             <div style="font-weight:600; font-size:13px;">${s.title}</div>
         </div>
     `).join('');
-    sb.innerText="SEARCH";
-}
-
-async function playTrack(s){
-    currentTrack = s;
-    playerBar.classList.remove('hidden');
-    pThumb.src = s.thumbnail; pTitle.innerText = s.title;
-    
-    const res = await fetch("/api/play", {
-        method:"POST", headers:{"Content-Type":"application/json"},
-        body:JSON.stringify({url:s.id})
-    });
-    const data = await res.json();
-
-    if(hls){ hls.destroy(); hls=null; }
-    if(Hls.isSupported() && data.stream_url.includes(".m3u8")){
-        hls = new Hls(); hls.loadSource(data.stream_url); hls.attachMedia(audio);
-        hls.on(Hls.Events.MANIFEST_PARSED, ()=>audio.play());
-    } else {
-        audio.src = data.stream_url; audio.play();
-    }
-    playBtn.innerText="PAUSE";
 }
 
 function togglePlay(){
@@ -184,26 +181,8 @@ function togglePlay(){
     else{ audio.pause(); playBtn.innerText="PLAY"; }
 }
 
-async function toggleLike(){
-    const res = await fetch('/api/like',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(currentTrack)});
-    const d = await res.json();
-    likeBtn.innerText = d.status==='liked'?'♥':'♡';
-}
-
-async function loadLibrary(){
-    const res = await fetch('/api/library');
-    const data = await res.json();
-    libGrid.innerHTML = data.map(s => `
-        <div class="track" onclick='playTrack(${JSON.stringify(s)})'>
-            <img src="${s.thumbnail}">
-            <div style="font-weight:600; font-size:13px;">${s.title}</div>
-        </div>
-    `).join('');
-}
-
 audio.ontimeupdate = () => { if(audio.duration) progress.value = (audio.currentTime/audio.duration)*100; };
-progress.oninput = () => { if(audio.duration) audio.currentTime = (progress.value/100)*audio.duration; };
-si.onkeydown = e => { if(e.key==='Enter') search(); };
+progress.oninput = () => { audio.currentTime = (progress.value/100)*audio.duration; };
 </script>
 </body>
 </html>
