--- a/index.html
+++ b/index.html
@@ -1,242 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VoFo Music | Private Listening</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <style>
-        :root { --bg: #0a0a0a; --gold: #c5a367; --soft: #f8f8f8; --muted: #777; --card-bg: rgba(255, 255, 255, 0.03); }
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { background: radial-gradient(circle at 50% 40%, #1c1c1c 0%, #0a0a0a 100%); color: var(--soft); font-family: 'Inter', sans-serif; min-height: 100vh; display: flex; flex-direction: column; }
-        
-        .hidden { display: none !important; }
+<meta charset="UTF-8">
+<title>VoFo Music</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
-        /* Auth UI */
-        .auth-container { position: fixed; inset: 0; background: var(--bg); z-index: 5000; display: flex; justify-content: center; align-items: center; }
-        .auth-card { background: #111; padding: 40px; border-radius: 8px; width: 100%; max-width: 400px; text-align: center; border: 1px solid #222; }
-        .auth-card h2 { font-family: 'Playfair Display'; margin-bottom: 20px; color: var(--gold); }
-        .auth-card input { width: 100%; padding: 15px; margin-bottom: 10px; background: #000; border: 1px solid #333; color: white; border-radius: 4px; }
-        .auth-card button { width: 100%; padding: 15px; background: var(--gold); border: none; font-weight: bold; cursor: pointer; border-radius: 4px; }
-        .switch-auth { font-size: 12px; margin-top: 15px; color: var(--muted); cursor: pointer; text-decoration: underline; }
-
-        /* App UI */
-        .nav-bar { padding: 20px 40px; display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid rgba(255,255,255,0.05); }
-        .nav-links { display: flex; gap: 20px; }
-        .nav-links span { font-size: 12px; letter-spacing: 2px; cursor: pointer; color: var(--muted); transition: 0.3s; }
-        .nav-links span:hover, .nav-links span.active { color: var(--gold); }
-
-        .hero { flex: 1; display: flex; flex-direction: column; align-items: center; text-align: center; padding: 40px 20px; }
-        .est { font-size: 12px; letter-spacing: .4em; text-transform: uppercase; color: var(--gold); margin-bottom: 20px; font-weight: 600; }
-        h1 { font-family: 'Playfair Display', serif; font-size: clamp(3rem, 8vw, 5rem); color: #fff; margin-bottom: 10px; }
-        .search-box { width: 100%; max-width: 500px; }
-        .search-box input { width: 100%; padding: 20px; text-align: center; background: var(--card-bg); border: 1px solid rgba(255,255,255,0.1); color: white; border-radius: 4px; margin-bottom: 15px; }
-        .search-box button { width: 100%; padding: 18px; background: var(--gold); border: none; font-weight: 700; cursor: pointer; border-radius: 4px; }
-
-        .container { width: 100%; max-width: 700px; margin: auto; padding-bottom: 150px; }
-        .track { padding: 15px; display: flex; align-items: center; gap: 20px; border-radius: 8px; background: var(--card-bg); cursor: pointer; margin-bottom: 10px; transition: 0.3s; }
-        .track:hover { transform: translateX(10px); background: rgba(197, 163, 103, 0.08); }
-        .track img { width: 50px; height: 50px; border-radius: 4px; object-fit: cover; }
-        .track-meta div:first-child { font-weight: 600; font-size: 14px; }
-        .track-meta div:last-child { font-size: 11px; color: var(--muted); text-transform: uppercase; }
-
-        .player { position: fixed; bottom: 0; width: 100%; background: rgba(10,10,10,0.95); backdrop-filter: blur(20px); padding: 20px 40px; display: flex; align-items: center; gap: 30px; border-top: 1px solid rgba(197,163,103,0.2); z-index: 1000; }
-        #progress { flex: 1; accent-color: var(--gold); height: 3px; cursor: pointer; }
-        .like-btn { cursor: pointer; font-size: 20px; transition: 0.3s; color: var(--muted); }
-        .like-btn.active { color: #ff4b2b; transform: scale(1.1); }
-    </style>
+<style>
+body{margin:0;background:#0b0b0b;color:#fff;font-family:Inter}
+.hidden{display:none}
+nav{display:flex;justify-content:space-between;padding:20px}
+nav span{margin-left:20px;cursor:pointer}
+nav span.active{color:#c5a367}
+.hero{text-align:center;padding:60px}
+.container{max-width:700px;margin:auto}
+.track{display:flex;gap:15px;padding:15px;background:#141414;border-radius:8px;margin-bottom:10px;cursor:pointer}
+.track img{width:50px;height:50px;border-radius:4px;object-fit:cover}
+.player{position:fixed;bottom:0;width:100%;background:#000;padding:15px;display:flex;gap:15px;align-items:center}
+.player img{width:60px;height:60px}
+.controls button{background:none;border:none;color:#c5a367;font-size:18px;cursor:pointer}
+.like.active{color:red}
+</style>
 </head>
+
 <body>
 
-<div id="authScreen" class="auth-container">
-    <div id="loginForm" class="auth-card">
-        <h2>VoFo Login</h2>
-        <input type="text" id="lUser" placeholder="Username">
-        <input type="password" id="lPass" placeholder="Password">
-        <button onclick="auth('login')">ENTER</button>
-        <p class="switch-auth" onclick="toggleAuth()">Need an account? Register</p>
-    </div>
-    <div id="registerForm" class="auth-card hidden">
-        <h2>Create Account</h2>
-        <input type="text" id="rUser" placeholder="Choose Username">
-        <input type="password" id="rPass" placeholder="Password">
-        <button onclick="auth('register')">CREATE</button>
-        <p class="switch-auth" onclick="toggleAuth()">Already a member? Login</p>
-    </div>
+<div id="auth">
+    <h2 align="center">VoFo Login</h2>
+    <input id="user" placeholder="Username"><br><br>
+    <input id="pass" type="password" placeholder="Password"><br><br>
+    <button onclick="login()">Login</button>
 </div>
 
 <div id="app" class="hidden">
-    <nav class="nav-bar">
-        <div style="font-family:'Playfair Display'; color:var(--gold); font-size: 1.5rem;">VoFo</div>
-        <div class="nav-links">
-            <span id="navExplore" class="active" onclick="switchTab('explore')">EXPLORE</span>
-            <span id="navLibrary" onclick="switchTab('library')">LIBRARY</span>
-            <span onclick="logout()">LOGOUT</span>
-        </div>
-    </nav>
 
-    <div id="exploreTab" class="hero">
-        <div class="est">PRIVATE MUSIC PLATFORM</div>
-        <h1>Discovery</h1>
-        <div class="search-box">
-            <input id="searchInput" placeholder="Search artist or track..." autocomplete="off">
-            <button id="searchBtn" onclick="doSearch()">EXPLORE</button>
-        </div>
-        <div id="results" class="container" style="margin-top: 40px;"></div>
+<nav>
+    <strong>VoFo</strong>
+    <div>
+        <span id="tabExplore" class="active" onclick="show('explore')">Explore</span>
+        <span id="tabLibrary" onclick="show('library')">Library</span>
+        <span onclick="logout()">Logout</span>
     </div>
+</nav>
 
-    <div id="libraryTab" class="hero hidden">
-        <div class="est">YOUR COLLECTION</div>
-        <h1>Library</h1>
-        <div id="libraryResults" class="container" style="margin-top: 40px;"></div>
-    </div>
+<div id="explore" class="hero">
+    <input id="q" placeholder="Search music">
+    <button onclick="search()">Search</button>
+    <div id="results" class="container"></div>
 </div>
 
-<div class="player hidden" id="player">
-    <img id="pThumb" style="width:55px; height:55px; border-radius:4px;">
-    <div style="flex:1; display:flex; flex-direction:column; gap:8px;">
-        <div style="display:flex; justify-content:space-between; align-items:center;">
-            <div>
-                <div id="pTitle" style="font-weight:600; font-size:14px;"></div>
-                <div id="pArtist" style="font-size:10px; color:var(--muted); text-transform:uppercase;"></div>
-            </div>
-            <div id="likeBtn" class="like-btn" onclick="toggleLike()">❤</div>
-        </div>
-        <input type="range" id="progress" value="0" min="0" max="100" step="0.1">
+<div id="library" class="hero hidden">
+    <h2>Liked Songs</h2>
+    <div id="libraryResults" class="container"></div>
+</div>
+
+</div>
+
+<div id="player" class="player hidden">
+    <img id="thumb">
+    <div style="flex:1">
+        <div id="title"></div>
+        <div id="artist"></div>
     </div>
-    <button id="playBtn" style="background:var(--gold); border:none; padding:10px 25px; border-radius:4px; font-weight:800; cursor:pointer;">PAUSE</button>
+    <div class="controls">
+        <button onclick="prev()">⏮</button>
+        <button onclick="shuffle()">🔀</button>
+        <button onclick="toggle()">▶</button>
+        <button onclick="next()">⏭</button>
+        <button onclick="repeat()">🔁</button>
+        <span id="like" class="like" onclick="toggleLike()">❤</span>
+    </div>
 </div>
 
 <script>
-    const audio = new Audio();
-    let currentTrack = null;
-    let likedTrackIds = new Set();
+const audio=new Audio()
+let list=[],index=0,liked=[],shuffleOn=false,repeatOn=false
 
-    // --- Authentication ---
-    function toggleAuth() {
-        document.getElementById('loginForm').classList.toggle('hidden');
-        document.getElementById('registerForm').classList.toggle('hidden');
+async function login(){
+    const r=await fetch('/api/auth/login',{method:'POST',headers:{'Content-Type':'application/json'},
+    body:JSON.stringify({username:user.value,password:pass.value})})
+    if((await r.json()).success){
+        auth.classList.add('hidden')
+        app.classList.remove('hidden')
+        loadLibrary()
     }
+}
 
-    async function auth(type) {
-        const u = document.getElementById(type === 'login' ? 'lUser' : 'rUser').value;
-        const p = document.getElementById(type === 'login' ? 'lPass' : 'rPass').value;
-        const res = await fetch(`/api/auth/${type}`, {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({username: u, password: p})
-        });
-        const data = await res.json();
-        if(data.success) {
-            if(type === 'register') { alert('Registered! Please login.'); toggleAuth(); }
-            else { checkStatus(); }
-        } else { alert(data.error); }
-    }
+async function logout(){await fetch('/api/auth/logout');location.reload()}
 
-    async function checkStatus() {
-        const res = await fetch('/api/auth/status');
-        const data = await res.json();
-        if(data.logged_in) {
-            document.getElementById('authScreen').classList.add('hidden');
-            document.getElementById('app').classList.remove('hidden');
-            fetchLibraryIds();
-        }
-    }
+function show(t){
+    explore.classList.toggle('hidden',t!=='explore')
+    library.classList.toggle('hidden',t!=='library')
+    tabExplore.classList.toggle('active',t==='explore')
+    tabLibrary.classList.toggle('active',t==='library')
+    if(t==='library')loadLibrary()
+}
 
-    async function logout() {
-        await fetch('/api/auth/logout');
-        location.reload();
-    }
+async function search(){
+    const r=await fetch('/api/search?q='+q.value)
+    render(await r.json(),results)
+}
 
-    // --- Tab Management ---
-    function switchTab(tab) {
-        document.getElementById('exploreTab').classList.toggle('hidden', tab !== 'explore');
-        document.getElementById('libraryTab').classList.toggle('hidden', tab !== 'library');
-        document.getElementById('navExplore').classList.toggle('active', tab === 'explore');
-        document.getElementById('navLibrary').classList.toggle('active', tab === 'library');
-        if(tab === 'library') loadLibrary();
-    }
+async function loadLibrary(){
+    const r=await fetch('/api/library')
+    liked=await r.json()
+    render(liked,libraryResults)
+}
 
-    // --- Music Logic ---
-    async function doSearch() {
-        const q = searchInput.value;
-        if(!q) return;
-        searchBtn.innerText = "DIGGING...";
-        const res = await fetch(`/api/search?q=${encodeURIComponent(q)}`);
-        const data = await res.json();
-        renderTracks(data, 'results');
-        searchBtn.innerText = "EXPLORE";
-    }
+function render(arr,el){
+    el.innerHTML=''
+    arr.forEach((s,i)=>{
+        const d=document.createElement('div')
+        d.className='track'
+        d.innerHTML=`<img src="${s.thumbnail}"><div><div>${s.title}</div><div>${s.artist}</div></div>`
+        d.onclick=()=>play(arr,i)
+        el.appendChild(d)
+    })
+}
 
-    function renderTracks(tracks, divId) {
-        const div = document.getElementById(divId);
-        div.innerHTML = "";
-        tracks.forEach(s => {
-            const t = document.createElement('div');
-            t.className = 'track';
-            t.innerHTML = `<img src="${s.thumbnail}"><div class="track-meta"><div>${s.title}</div><div>${s.artist}</div></div>`;
-            t.onclick = () => playSong(s);
-            div.appendChild(t);
-        });
-    }
+async function play(arr,i){
+    list=arr;index=i
+    const s=arr[i]
+    player.classList.remove('hidden')
+    title.innerText=s.title;artist.innerText=s.artist;thumb.src=s.thumbnail
+    const r=await fetch('/api/play',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({url:s.id})})
+    audio.src=(await r.json()).stream_url
+    audio.play()
+}
 
-    async function playSong(song) {
-        currentTrack = song;
-        player.classList.remove('hidden');
-        pTitle.innerText = song.title; pArtist.innerText = song.artist; pThumb.src = song.thumbnail;
-        
-        const res = await fetch('/api/play', {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify({url: song.id})
-        });
-        const data = await res.json();
-        audio.src = data.stream_url;
-        audio.play();
-        playBtn.innerText = "PAUSE";
-        updateLikeBtnUI();
-    }
+audio.onended=()=>setTimeout(()=>repeatOn?play(list,index):next(),1000)
 
-    // --- Library & Likes ---
-    async function fetchLibraryIds() {
-        const res = await fetch('/api/library');
-        const data = await res.json();
-        likedTrackIds = new Set(data.map(t => t.id));
-    }
+function next(){index=shuffleOn?Math.random()*list.length|0:(index+1)%list.length;play(list,index)}
+function prev(){index=(index-1+list.length)%list.length;play(list,index)}
+function toggle(){audio.paused?audio.play():audio.pause()}
+function shuffle(){shuffleOn=!shuffleOn}
+function repeat(){repeatOn=!repeatOn}
 
-    async function loadLibrary() {
-        const res = await fetch('/api/library');
-        const data = await res.json();
-        renderTracks(data, 'libraryResults');
-    }
-
-    async function toggleLike() {
-        if(!currentTrack) return;
-        const res = await fetch('/api/like', {
-            method: 'POST',
-            headers: {'Content-Type': 'application/json'},
-            body: JSON.stringify(currentTrack)
-        });
-        const data = await res.json();
-        if(data.status === 'liked') likedTrackIds.add(currentTrack.id);
-        else likedTrackIds.delete(currentTrack.id);
-        updateLikeBtnUI();
-    }
-
-    function updateLikeBtnUI() {
-        likeBtn.classList.toggle('active', likedTrackIds.has(currentTrack.id));
-    }
-
-    // --- Audio Controls ---
-    playBtn.onclick = () => {
-        if(audio.paused) { audio.play(); playBtn.innerText = "PAUSE"; }
-        else { audio.pause(); playBtn.innerText = "PLAY"; }
-    };
-    audio.ontimeupdate = () => { if(audio.duration) progress.value = (audio.currentTime/audio.duration)*100; };
-    progress.oninput = () => { if(audio.duration) audio.currentTime = (progress.value/100)*audio.duration; };
-
-    checkStatus();
+async function toggleLike(){
+    const s=list[index]
+    await fetch('/api/like',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(s)})
+    loadLibrary()
+}
 </script>
+
 </body>
 </html>
